# Mini-Game-Hub

./: CMakeLists.txt  README.md
docs/: TicTacToe_gameplay.md  ai_collaboration.md  final_reflection.md  implementation_plan.md  initial_feature_tests.md  snake_game.md
src/: GameManager.cpp  GameManager.h  GameMenu.cpp  GameMenu.h  SnakeGame.cpp  SnakeGame.h  TicTacToe.cpp  TicTacToe.h  main.cpp
tests/: test_main.cpp
